# PW-HW13_2

./: pyproject.toml
homework10/: .example.env
homework10/app_homework10/: apps.py  forms.py  models.py  urls.py  views.py
homework10/app_homework10/migrations/: 0001_initial.py  0002_alter_author_bio.py
homework10/app_homework10/templates/app_homework10/: author.html  author_add.html  base.html  index.html  quote.html  quote_add.html
homework10/homework10/: asgi.py  settings.py  urls.py  wsgi.py
homework10/users/: forms.py  views.py
homework10/users/templates/users/: logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  signin.html  signup.html
